[gd_scene load_steps=4 format=3 uid="uid://c1a2b3c4d5e6f"]

[ext_resource type="Script" uid="uid://f6e5d4c3b2a1c" path="res://Loot/blue_square.gd" id="1_bluesquare"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(16, 16)

[node name="BlueSquare" type="Area2D" groups=["loot"]]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_bluesquare")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.5, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="PickupCollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("RectangleShape2D_2")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="area_entered" from="PickupArea" to="." method="_on_pickup_area_area_entered"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]